--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.ts",
-    "build": "rimraf dist && tsc",
-    "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +24,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
     "pre-commit": "^1.2.2",
     "rimraf": "^6.0.1"
