--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@types/ioredis": "^4.28.10",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ioredis": "^5.4.2",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
     "pre-commit": "^1.2.2",
+    "redis": "^4.7.0",
     "rimraf": "^6.0.1"
   },
   "pre-commit": [
